refactor code to ahndle better user actions

--- a/Sources/ChatLibrary/Resources/base.lproj/Localizable.strings
+++ b/Sources/ChatLibrary/Resources/base.lproj/Localizable.strings
@@ -19,3 +19,4 @@
 
 "Chat.Close.Hint" = "Double Tap to go back to Chat home screen";
 "Close" = "Close";
+"ChatSetupChatAboutCell.Submit" = "Submit";
